--- a/01-Cheyenne.html
+++ b/01-Cheyenne.html
@@ -98,7 +98,7 @@
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>Tentative Schedule</h2></hgroup><article  id="tentative-schedule">
+<slide class=""><hgroup><h2>Tentative Schedule</h2></hgroup><article  id="tentative-schedule" class="build">
 
 <ul>
 <li>Cheyenne101</li>
@@ -138,6 +138,12 @@
 </table>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Cheyenne 101</h2></hgroup><article  id="cheyenne-101">
+
+</article></slide><slide class=""><hgroup><h2>Cheyenne</h2></hgroup><article  id="cheyenne">
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ycNQ_wqsWFc" frameborder="0" allowfullscreen>
+
+</iframe>
 
 </article></slide><slide class=""><hgroup><h2>Hardware</h2></hgroup><article  id="hardware">
 
