--- a/01-Cheyenne.html
+++ b/01-Cheyenne.html
@@ -471,7 +471,11 @@
 <ul>
 <li><p><strong>Citation </strong><br/>Computational and Information Systems Laboratory. 2017. Cheyenne: HPE/SGI ICE XA System (University Community Computing). Boulder, CO: National Center for Atmospheric Research. doi: <a href='https://doi.org/10.5065/D6RX99HX' title=''>10.5065/D6RX99HX</a>.</p></li>
 <li><p><strong>Acknowledgments</strong><br/><em>We would like to acknowledge high-performance computing support from Cheyenne (<a href='doi:10.5065/D6RX99HX' title=''>doi:10.5065/D6RX99HX</a>) provided by NCAR&#39;s Computational and Information Systems Laboratory, sponsored by the National Science Foundation.</em></p></li>
-</ul></article></slide>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Test</h2></hgroup><article  id="test">
+
+<p>\[y = mx + b\]</p></article></slide>
 
 
   <slide class="backdrop"></slide>
