--- a/05-WRF-Hydro_IO.html
+++ b/05-WRF-Hydro_IO.html
@@ -21,6 +21,18 @@ class: center, middle, inverse, title-slide
 
 
 
+#Using git to connect GitHub  
+* To clone  
+```git
+git clone https://github.com/ChuliangXiao/Training.git
+```
+
+* To update 
+```git
+git pull
+```
+---
+
 # Outline
  
 #### Review of WRF-Hydro Workflow 
@@ -36,7 +48,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-# WRF-Hydro Workflow  
+# Offline WRF-Hydro Workflow    
 &lt;div align="center"&gt;
 &lt;img src="WRF-Hydro-Workflow.png" width=800 height=480&gt;
 &lt;/div&gt;
