--- a/05-WRF-Hydro_IO.html
+++ b/05-WRF-Hydro_IO.html
@@ -4,8 +4,7 @@
     <title>Hands-on Traning</title>
     <meta charset="utf-8">
     <meta name="author" content="Chuliang Xiao" />
-    <link href="libs/remark-css/default.css" rel="stylesheet" />
-    <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -103,7 +102,8 @@ ALL FORCING DATA IS MAPPED TO SAME GRID (based on WRF ‘geogrid’)
 SPECIFIED PRECIPITATION MAY HAVE HIGHER TIME RESOLUTION (e.g. 5min)  
 ---
 
-# Meteorological Forcing 1: Regridding
+# Meteorological Forcing 1: Regridding  
+
 .pull-left[
 * Earth System Modeling Framework (ESMF) `ESMF_regrid`   
     + https://www.ncl.ucar.edu/Applications/ESMF.shtml  
@@ -138,12 +138,13 @@ SPECIFIED PRECIPITATION MAY HAVE HIGHER TIME RESOLUTION (e.g. 5min)
 
         var2d   = var
 *       v4      = ESMF_regrid( var2d , opt)
-```
+```  
 ]  
 
 ---
 
-# USGS Observation: Website    
+# USGS Observation: Website  
+
 * USGS Current Water Data for Michigan
     - https://waterdata.usgs.gov/mi/nwis/rt
     
